media/css/do.css
/** dokieli
 *
 * Sarven Capadisli <info@csarven.ca> http://csarven.ca/#i
 * http://www.apache.org/licenses/LICENSE-2.0.html Apache License, Version 2.0
 * https://github.com/linkeddata/dokieli
 */

@media print {
.do {
display:none !important;
}
span.do.ref {
display:inline !important;
}
span.do.ref sup {
display:none;
}
.tabs nav {
display:none !important;
}
.tabs .selected {
border:0 !important;
padding:0 !important;
}
}

@media screen and (max-width: 840px){
aside.note.do blockquote article {
position: static !important;
}
}

@media screen {
body.on-document-menu > *:not([class~="on"]) {
opacity:0.5;
transition:opacity 1s ease-in-out;
-moz-transition:opacity 1s ease-in-out;
-webkit-transition:opacity 1s ease-in-out;
}
}

[contenteditable=true]:focus {
outline:none;
}


/*Animated adapted from https://github.com/daneden/animate.css using MIT license*/
.animated {
  animation-duration: 0.25s;
  animation-fill-mode: both;
}
@keyframes zoomOut {
  from {
    opacity: 1;
  }

  50% {
    opacity: 0;
    transform: scale3d(.3, .3, .3);
  }

  to {
    opacity: 0;
  }
}

.zoomOut {
  animation-name: zoomOut;
}


#graph-view {
width:auto;
height:auto;
max-width:90%;
max-height:90%;
}
#graph-view svg {
margin:0 auto;
display:block;
}

progress { margin:0 1em; }
figure .progress { display:block; margin:0 auto; }

main > article { position:relative; }

.do,
.do *:not([class~="fa"]) {
font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
font-size:1em;
}
.do th,
.do legend {
font-weight:bold !important;
}
.do label {
font-weight:normal !important;
padding:0;
}

menu.do,
aside.do {
position:fixed;
z-index:2147483646;
max-height:90%;
background-color:#fff;
font-size:0.8em;
margin:0;
}
menu.do {
top:0;
right:0;
}
aside.do {
top:1em;
}
.do.on {
padding:1em;
overflow:auto;
z-index:2147483647;
}
.do.on p {
text-indent:0;
text-align:left;
}

aside.do.on {
border:1px solid #ccc;
border-radius:0.5em;
box-shadow:0.25em 0.25em 0.25em rgba(0,0,0,0.1);
max-width:35em;
width:90%;
}
menu.do.on {
border-left:1px solid #ccc;
border-bottom:1px solid #ccc;
border-bottom-left-radius:0.5em;
box-shadow:0.25em 0.25em 0.25em rgba(0,0,0,0.1);
}
aside.do.on:not([id="toc"]) {
left:50%;
transform:translate(-50%, 0);
}
aside.do.on a {
word-wrap:break-word;
}
aside.do.on:not([id="toc"]) label {
min-width:5%;
display:inline-block;
}
aside.do.on:not([id="toc"]) label[for$="-input"] {
vertical-align: middle;
}

aside.do input {
padding:0.2em;
}
aside.do input[type="checkbox"] {
padding:0;
margin-left:0;
vertical-align: middle;
}
aside.do input[type="text"] {
width:60%;
max-width:22em;
}
aside.do input + label {
margin-left:0.25em;
vertical-align: middle;
display:inline-block;
}

aside.do textarea {
width:96% !important;
max-width:44em !important;
font-size:1em !important;
}

aside.do.on ul {
margin:0;
padding:0;
list-style: none;
}
aside.do.on section {
margin-top:1em;
}

#share-resource.do.on li {
margin:0 0 0.5em 0;
line-height: 1;
}
#share-resource.do.on #share-resource-address-book {
margin-bottom:1em;
}
#share-resource.do.on #share-resource-address-book > label {
font-weight:bold;
}
#share-resource.do.on #share-resource-contacts {
max-height:30em;
overflow:auto;
}
#share-resource.do.on #share-resource-contacts label {
vertical-align:middle;
}

#source-view textarea {
font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace !important;
}

aside.note {
position:static;
border:0;
margin:0;
padding:0;
}
aside.note:after {
width:auto;
position:static;
}

#document-interactions article + article {
margin-top:1em;
}

aside.note.do blockquote article {
position: absolute;
left: auto;
right: -27%;
z-index: 1;
width: 25%;
font-size: 0.9em;
text-align: left;
}

#document-interactions article.do h2,
#document-interactions article.do h3,
#document-interactions article.do dt,
#document-interactions article.do .target,
#document-interactions article.do .renderedvia,
#document-interactions article.do .rights,
#document-interactions article.do .canonical,
aside.note.do h2,
aside.note.do h3,
aside.note.do blockquote dt,
aside.note.do blockquote .target,
aside.note.do blockquote .renderedvia,
aside.note.do blockquote .rights,
aside.note.do blockquote .canonical {
display:none;
}
aside.note.do blockquote dl.author-name img[width="48"][height="48"][rel$="image"] {
/*vertical-align:top;*/
}
#document-interactions section,
#document-interactions article.do dl,
#document-interactions article.do dl *,
aside.note.do blockquote dl,
aside.note.do blockquote dl * {
margin:0;
margin-block-before:0;
margin-block-after:0;
margin-block-start:0;
margin-block-end:0;
-webkit-margin-before:0;
-webkit-margin-after:0;
-webkit-margin-start:0;
-webkit-margin-end:0;
margin-inline-start:0;
margin-inline-end:0;
}

/*aside.note.do blockquote dl.published,
aside.note.do blockquote dl.license,
aside.note.do blockquote dl.rights {
position:relative;
top:-1.5em;
left:3.75em;
}*/
aside.note.do blockquote dl.published a,
aside.note.do blockquote dl.license a,
aside.note.do blockquote dl.rights a {
color:#333;
/*text-decoration:none;*/
}
aside.note.do blockquote dl.published a:hover,
aside.note.do blockquote dl.license a:hover,
aside.note.do blockquote dl.rights a:hover {
color:#000;
text-decoration:underline;
}
/*aside.note.do blockquote article > div,
aside.note.do blockquote article > section {
position:relative;
top:-1.5em;
}*/


#document-editor {
position:static;
}


#document-menu,
#toc {
margin:0;
width:20em;
}


#toc {
top:0;
left:0;
z-index:2147483646;
border:0;
border-radius:0;
border-bottom: 1px solid #ccc;
border-bottom-right-radius: 0.5em;
border-right: 1px solid #ccc;
box-shadow: 0.25em 0.25em 0.25em rgba(0, 0, 0, 0.1);
}
#toc ul,
#toc ol {
margin-top:0.5em;
}

.success { background-color:#FFFFFF; color:#647819; font-weight:bold; }
.warning { background-color:#FFFF00; color:#000000; font-weight:bold; }
.error { background-color:#FF0000; color:#FFFFFF; font-weight:bold; }
.highlight { background-color:#00FFFF; color:#000000; }
/* ... */

